--- a/TeaCozy/index.html
+++ b/TeaCozy/index.html
@@ -23,7 +23,7 @@
   <div class="MainContainer">
 
  <!-- First ROW Our Mission -->
-    <div class="OurMission flex-container">
+    <div class="OurMissionImg flex-container Img">
       <div class="content">
         <h2>Our Mission</h2>
         <p>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</p>
@@ -71,11 +71,44 @@
 
  <!-- Third Row Locations-->
 
-    <div class="">
+    <div class="Locations Img">
 
+      <div class="flex-container">
+          <div class=LocaLoc>
+            <h3>Location</h3>
+          </div>
+        <div class="PicBlock">
+          <h3>Downtown</h3>
+          <span>384 West 4th St</span>
+          <span>Suite 108</span>
+          <span>Portland, Maine</span>
+        </div>
+
+        <div class="PicBlock">
+          <h3>East Bayside</h3>
+          <span>3433 Phisherman's Avenue</span>
+          <span>(Northwest Corner)</span>
+          <span>Portland, Maine</span>
+        </div>
+
+        <div class="PicBlock">
+          <h3>Oakdale</h3>
+          <span>515 Crescent Avenue</span>
+          <span>Second Floor</span>
+          <span>Portland, Maine</span>
+        </div>
     </div>
+  </div>
 
 
+<div class="Contact">
+  <div class="FooterInfo">
+    <h2 >The Tea Cozy</h2>
+    <p>contact@theteacozy.com</p>
+    <p>917-555-8904</p>
+  </div>
+
+</div>
 </div>
 
 <!--END MAIN CONTAINER-->
@@ -83,6 +116,8 @@
 
 <!-- Footer-->
 
-    <footer></footer>
+    <footer>
+      <span>copyright The Tea Cozy 2017</span>
+    </footer>
   </body>
 </html>
